# MedHSS_datalake

./: .gitignore  .travis.yaml  .travis.yml  LICENSE  README.md  build.py  pyproject.toml  requierements.txt  requirements.txt  setup.py
resources/: PT_HAS.csv  already_scanned.csv  files_done.txt  scanned_urls.csv
src/: target
src/main/database/: scanned_articles.sqlite
src/main/python/databases/: sqlite.py
src/main/python/download/: researchgate.py
src/main/python/emails/: gmail.py
src/main/python/enrichment/: emails.py  pubmed.py  pubmication.py
src/main/python/monitoring/: monitore_pubmed.py
src/main/python/publication/: publication.py
src/main/resources/: configuration.cfg
src/main/scripts/: enrich_pubmed.py  enrich_pubmed_git.py  main.py  nash_requetes.py
src/unittest/python/: download_tests.py  test_databases.py  test_gmail.py  test_mailer.py  test_monitore_pubmed.py  test_publication.py
