[tool.poetry]
name = "MEDHSS_Datalake"
version = "0.0.1"
description = ""
authors = ["Emeric <emeric.dynomant@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
yapf = "^0.29.0"
pytest = "^5.4.1"
configparser = "^5.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
